<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="appName">android-commons</string>

	<string name="save">Save</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="loading">Loading…</string>
	<string name="confirmExit">If you exit this screen, you will lose any unsaved changes </string>
	<string name="areYouSure">Are you sure ?</string>
	<string name="noResults">There are no available results</string>
	<string name="featureNotAvailable">This feature is not available yet</string>
	<string name="zeroPercent">0%</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	<string name="finish">Finish</string>

	<!-- GCM -->
	<string name="onMissingGoogleAccountError">You need to set up a Google account on your device to use push notifications</string>

	<!-- Errors -->
	<string name="internalError">Oops! We\'re having technical problems. Try again later.</string>
	<string name="serverError">Oops! We\'re having technical problems. Try again later.</string>
	<string name="connectionError">Connection Error. Please try again</string>
	<string name="facebookError">There is a problem connecting to Facebook. Please try again.</string>

	<!-- Google Play Utils -->
	<string name="updateAppTitle">%1$s outdated</string>
	<string name="updateAppMessage">You have been signed out of %1$s because you
		are using an outdated version. Please update the
		application and try
		again.
	</string>
	<string name="installAppTitle">Install %1$s?</string>
	<string name="installAppMessage">This application requires %1$s. Would you like to install it?</string>

	<!-- Abstract Search Activity -->
	<string name="typeHere">Type Here</string>
	<string name="noResultsSearch">There are no results for your search.</string>
	<string name="requiredSearchTerm">The search term is required</string>

	<!-- Date Picker Dialog Fragment -->
	<string name="selectDate">Select Date</string>

	<!-- Time Picker Dialog Fragment -->
	<string name="selectTime">Select Time</string>

	<!-- Picture Dialog Fragment -->
	<string name="selectPhoto">Photo Source</string>
	<string name="camera">Camera</string>
	<string name="gallery">Gallery</string>

	<!-- ExceptionReportActivity -->
	<string name="exceptionReportDialogTitle">%1$s crashed</string>
	<string name="exceptionReportDialogText">%1$s crashed because of an unexpected error. Please help
		fixing the error by sending an error report
		to the developers.
	</string>
	<string name="exceptionReportNotificationTitle">%1$s crashed</string>
	<string name="exceptionReportNotificationText">Click here to help fixing the issue</string>

	<!-- About Dialog -->
	<string name="about">About</string>
	<string name="version">Version %1$s</string>
	<string name="contactUs">Contact Us</string>
	<string name="termsOfService">Terms of Service</string>
	<string name="privacy">Privacy</string>
	<string name="share">Share</string>
	<string name="shareTitle">Share %1$s</string>
	<string name="copyright">© %1$s %2$s.</string>
	<string name="allRightsReservedLegend">All Rights Reserved.</string>

	<!-- In-app Billing -->
	<string name="inAppBillingNotSupported">In-app billing is not supported</string>
	<string name="googlePlayConnectionError">There was an error connecting with the Google Play app</string>
	<string name="requestPurchaseCanceledByUser">Your purchase was cancelled</string>
	<string name="requestPurchaseServiceUnavailable">The purchase service is unavailable</string>
	<string name="requestPurchaseError">Error when trying to purchase the product</string>

	<!-- External Apps -->
	<string name="barcodeScanner">Barcode Scanner</string>
	<string name="voiceSearch">Voice Search</string>

	<!-- Twitter -->
	<string name="twitterConnect">Connecting with Twitter…</string>
	<string name="twitterNoAuth">Twitter was no authorized</string>
	<string name="twitterError">Error connecting with Twitter</string>

	<!-- Settings Activity -->
	<string name="settings">Settings</string>

	<!-- Debug Settings Activity -->
	<string name="debugSettings">Debug Settings</string>
	<string name="httpMocks">HTTP Mocks</string>
	<string name="httpMockEnabledTitle">Http Mocks</string>
	<string name="httpMockEnabledDescription">Enable/disable http mocks</string>
	<string name="httpMockSleepTitle">Http Mocks sleep</string>
	<string name="httpMockSleepDescription">Enable/disable http mocks sleep</string>
	<string name="packageName">Package Name: %1$s</string>
	<string name="environmentName">Environment Name: %1$s</string>
	<string name="analyticsEnabled">Analytics Enabled: %1$s</string>
	<string name="screenSize">Screen Size: %1$s</string>
	<string name="screenDensity">Screen Density: %1$s</string>
	<string name="commitId">Commit Id: %1$s</string>
	<string name="commitTime">Commit Time: %1$s</string>
	<string name="buildTime">Build Time: %1$s</string>
	
	<!-- Facebook SDK 3.0 -->
	<!--
	    Copyright 2012 Facebook
	
	    Licensed under the Apache License, Version 2.0 (the "License");
	    you may not use this file except in compliance with the License.
	    You may obtain a copy of the License at
	
	       http://www.apache.org/licenses/LICENSE-2.0
	
	    Unless required by applicable law or agreed to in writing, software
	    distributed under the License is distributed on an "AS IS" BASIS,
	    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	    See the License for the specific language governing permissions and
	    limitations under the License.
	-->
	<string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Please log in via https://www.facebook.com or https://m.facebook.com to re-enable the app to connect with Facebook.</string>
    <string name="com_facebook_requesterror_relogin">The app is not connected with Facebook, please log in and reconnect this app.</string>
    <string name="com_facebook_requesterror_password_changed">Your password on Facebook has changed, please reconnect the app with Facebook.</string>
    <string name="com_facebook_requesterror_reconnect">An error occurred when connecting with Facebook, please reconnect the app with Facebook.</string>
    <string name="com_facebook_requesterror_permissions">An app connection with Facebook failed due to insufficient permissions, please grant the app permissions to perform the operation.</string>

</resources>
